parser/src/snapshots/long_parser__expr__parse_paren.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Expr {
        kind: Binary(
            LogicalAnd,
            Expr {
                kind: Literal(
                    Int(
                        Int(
                            0,
                        ),
                    ),
                ),
                loc: 1:1,
            },
            Expr {
                kind: Binary(
                    LogicalOr,
                    Expr {
                        kind: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: 1:7,
                    },
                    Expr {
                        kind: Literal(
                            Int(
                                Int(
                                    2,
                                ),
                            ),
                        ),
                        loc: 1:12,
                    },
                ),
                loc: 1:7,
            },
        ),
        loc: 1:1,
    },
)
