parser/src/snapshots/long_parser__expr__parse_shl_shr.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Binary(
            Shr,
            Located {
                inner: Binary(
                    Shl,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:1,
                    },
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:6,
                    },
                ),
                loc: None:1:1,
            },
            Located {
                inner: Literal(
                    Int(
                        Int(
                            2,
                        ),
                    ),
                ),
                loc: None:1:11,
            },
        ),
        loc: None:1:1,
    },
)
