parser/src/snapshots/long_parser__expr__parse_ternary.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Expr {
        kind: Ternary(
            Expr {
                kind: Literal(
                    Int(
                        Int(
                            1,
                        ),
                    ),
                ),
                loc: 1:1,
            },
            Expr {
                kind: Literal(
                    Int(
                        Int(
                            2,
                        ),
                    ),
                ),
                loc: 1:5,
            },
            Expr {
                kind: Literal(
                    Int(
                        Int(
                            3,
                        ),
                    ),
                ),
                loc: 1:9,
            },
        ),
        loc: 1:1,
    },
)
