parser/src/snapshots/long_parser__expr__parse_unary.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Unary(
            Not,
            Located {
                inner: Literal(
                    Int(
                        Int(
                            0,
                        ),
                    ),
                ),
                loc: None:1:2,
            },
        ),
        loc: None:1:1,
    },
)
