parser/src/snapshots/long_parser__expr__parse_unary_logand.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Binary(
            LogicalAnd,
            Located {
                inner: Unary(
                    Not,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:2,
                    },
                ),
                loc: None:1:1,
            },
            Located {
                inner: Unary(
                    Not,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:8,
                    },
                ),
                loc: None:1:7,
            },
        ),
        loc: None:1:1,
    },
)
